Added ERD and schema file

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "\n",
+    "# Created config.py file which will have store credentials of PgAdmin\n",
     "from config import PgAdmin_userid, PgAdmin_password\n"
    ]
   },
@@ -17,7 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract :"
+    "# Abstract :\n",
+    "\n",
+    "We are creating a database on the World Happiness scores and pairing that data with data from World Bank to see which data points affect the Happiness scores (e.g. population, corruption, GDP per capita etc.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Extract : \n",
+    "\n",
+    "We collected the data from kaggle.com. The data was in .csv format. Below are the link of our dataset:\n",
+    "\n",
+    "1)\n",
+    "2)\n",
+    "3)\n"
    ]
   },
   {
@@ -451,7 +467,7 @@
     "# Import the .csv files\n",
     "gdp_csv_file = \"Resources/happiness_index.csv\"\n",
     "GDP_index_df = pd.read_csv(gdp_csv_file)\n",
-    "GDP_index_df"
+    "GDP_index_df\n"
    ]
   },
   {
@@ -681,7 +697,7 @@
     "# Import the .csv files\n",
     "happiness_csv_file = \"Resources/happiness_index2019.csv\"\n",
     "happiness_index_df = pd.read_csv(happiness_csv_file)\n",
-    "happiness_index_df"
+    "happiness_index_df\n"
    ]
   },
   {
@@ -935,7 +951,7 @@
     "# Import the .csv files\n",
     "corruption_csv_file = \"Resources/corruption_index.csv\"\n",
     "corruption_index_df = pd.read_csv(corruption_csv_file)\n",
-    "corruption_index_df"
+    "corruption_index_df\n"
    ]
   },
   {
@@ -1189,14 +1205,16 @@
     "# Import the .csv files\n",
     "population_csv_file = \"Resources/population.csv\"\n",
     "population_index_df = pd.read_csv(population_csv_file)\n",
-    "population_index_df"
+    "population_index_df\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transform :"
+    "# 2. Transform :\n",
+    "\n",
+    "The dataset we got was clean so we were not required to drop any data points like null data. However, we filtered the DataFrame and extracted specific columns that we wanted to keep in our database and renamed the columns' headers to enable merging of two DataFrames based on 'Country' column. Lastly we renamed the column headers to match the column header in our schema."
    ]
   },
   {
@@ -1290,7 +1308,7 @@
     "GDP_data_df = GDP_data_df.rename(columns = {\"Country name\" : \"Country\",\n",
     "                                         \"Logged GDP per capita\" : \"GDP per capita\"\n",
     "                                         })\n",
-    "GDP_data_df.head()"
+    "GDP_data_df.head()\n"
    ]
   },
   {
@@ -1384,7 +1402,7 @@
     "                                              \"Country or region\" : \"Country\",\n",
     "                                              \"Score\" : \"Happiness Score\"\n",
     "                                         })\n",
-    "happiness_df.head()"
+    "happiness_df.head()\n"
    ]
   },
   {
@@ -1529,7 +1547,7 @@
    "source": [
     "# Merge the DataFrames\n",
     "merge_one = pd.merge(left = GDP_data_df, right = happiness_df, how = \"inner\", on = \"Country\" )\n",
-    "merge_one"
+    "merge_one\n"
    ]
   },
   {
@@ -1621,7 +1639,7 @@
     "                                              \"Ladder\" : \"Corruption Rank\",\n",
     "                                              \"Corruption\" : \"Corruption Score\"\n",
     "                                         })\n",
-    "corruption_df.head()"
+    "corruption_df.head()\n"
    ]
   },
   {
@@ -1801,7 +1819,7 @@
    "source": [
     "# Merge the DataFrames\n",
     "merge_two = pd.merge(left = merge_one, right = corruption_df, how = \"inner\", on = \"Country\" )\n",
-    "merge_two"
+    "merge_two\n"
    ]
   },
   {
@@ -1894,7 +1912,7 @@
     "population_df  = population_df .rename(columns = {\"Country (or dependency)\" : \"Country\", \n",
     "                                              \"Population (2020)\" : \"Population\"\n",
     "                                         })\n",
-    "population_df.head()"
+    "population_df.head()\n"
    ]
   },
   {
@@ -2111,7 +2129,7 @@
    "source": [
     "# Merge the DataFrames to get the final DataFrame on which we will do Data Modelling\n",
     "combined_df = pd.merge(left = merge_two, right = population_df, how = \"inner\", on = \"Country\" )\n",
-    "combined_df"
+    "combined_df\n"
    ]
   },
   {
@@ -2469,7 +2487,7 @@
     }
    ],
    "source": [
-    "# Rename the column headers\n",
+    "# Rename the column headers to match the column header in our schema\n",
     "new_combined_df = new_combined_df.rename(columns = {\"Country ID\" : \"country_id\",\n",
     "                                                   \"Country\" : \"country_name\",\n",
     "                                                   \"GDP per capita\" : \"gdp_per_capita\",\n",
@@ -2482,14 +2500,18 @@
     "                                                   })\n",
     "\n",
     "\n",
-    "new_combined_df.head()"
+    "new_combined_df.head()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load :"
+    "# 3. Load :\n",
+    "\n",
+    "We had a structured dataset so we decided to use PostgresSql to create the database.\n",
+    "\n",
+    "In PgAdmin, we created a new database named 'ETL_project_db' and created tables inside this database. For connecting to this database, we used 'create_engine' module from SQLAlchemy. Finally, we did loading of DataFrame into the SQL database."
    ]
   },
   {
@@ -2509,13 +2531,14 @@
     "# The database name is \"ETL_project_db\"\n",
     "if PgAdmin_password == None:\n",
     "    \n",
-    "    # If only PgAdmin User ID is available\n",
+    "    # If only PgAdmin User ID is available, then connection will be...\n",
     "    connection_string = f\"{PgAdmin_userid}@localhost:5432/ETL_project_db\"\n",
     "    \n",
     "else:\n",
     "        \n",
-    "        # If both PgAdmin User ID and Password are available\n",
-    "        connection_string = f\"{PgAdmin_userid}:{PgAdmin_password}@localhost:5432/ETL_project_db\"\n",
+    "    # If both PgAdmin User ID and Password are available, then connection will be...\n",
+    "    connection_string = f\"{PgAdmin_userid}:{PgAdmin_password}@localhost:5432/ETL_project_db\"\n",
+    "            \n",
     "engine = create_engine(f\"postgresql://{connection_string}\")\n"
    ]
   },
@@ -2536,8 +2559,8 @@
     }
    ],
    "source": [
-    "# Confirm tables\n",
-    "engine.table_names()"
+    "# Confirm tables which we created in SQL Database\n",
+    "engine.table_names()\n"
    ]
   },
   {
